Adding basic workout functionality

--- a/app/src/main/res/layout/fitness_fragment.xml
+++ b/app/src/main/res/layout/fitness_fragment.xml
@@ -6,14 +6,38 @@
 
 
     <TextView
+        android:id="@+id/introductionFitness"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="If you complete the exercise, enter the weight used and press the button below"/>
+
+    <TextView
+        android:id="@+id/currentWorkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Fitness Fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/weightUsedExercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/currentWorkout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="100dp"/>
+
+    <Button
+        android:id="@+id/exerciseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Next Exercise"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
