--- a/app/src/main/res/values/goal_data.xml
+++ b/app/src/main/res/values/goal_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="goals">
-        <item>Lose weight</item>
+        <item>Gain muscle</item>
     </string-array>
 </resources>
