Added database support and water reminder based off of ambient temp

--- a/app/src/main/res/layout/fitness_fragment.xml
+++ b/app/src/main/res/layout/fitness_fragment.xml
@@ -18,6 +18,7 @@
         android:id="@+id/currentWorkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +28,7 @@
         android:id="@+id/weightUsedExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="number"
         app:layout_constraintTop_toTopOf="@id/currentWorkout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
